--- a/plugin.xml
+++ b/plugin.xml
@@ -19,9 +19,22 @@ xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.a
 <source-file src="src/android/Order.java" target-dir="src/cordova/plugin/smartoneprinter/Order" />
 <source-file src="src/android/PrinterStatusReceiver.java" target-dir="src/cordova/plugin/smartoneprinter/PrinterStatusReceiver" />
 <source-file src="src/android/utils/HandlerUtils.java" target-dir="src/cordova/plugin/smartoneprinter/utils/HandlerUtils" />
-<lib-file src="src/android/libs/telposdk_for_escpos.jar" />
-<lib-file src="src/android/libs/telposdk.jar" />
-<lib-file src="src/android/libs/core-3_3_telpo.jar" />
+
+<source-file src="src/android/libs/armeabi/libsystem_util.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libcommon_printer.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libcommon_printer_48.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libcommon_printer_581.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libcommon_serial.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libAlUSB.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libusb_util.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libserial_port.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libdecode.so" target-dir="app/src/main/jniLibs/armeabi/" />
+ <!-- <source-file src="src/android/libs/armeabi-v7a/libsystem_util.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
+ <source-file src="src/android/libs/arm64-v8a/libsystem_util.so" target-dir="app/src/main/jniLibs/arm64-v8a/" /> -->
+
+<lib-file src="src/android/libs/escpos_20200102_common.jar" />
+<lib-file src="src/android/libs/core-3_3.jar" />
+
 <!-- <lib-file src="src/android/libs/android-support-v4.jar" /> -->
 </platform>
 </plugin>
