--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,7 @@ xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.a
 <source-file src="src/android/libs/armeabi/libAlUSB.so" target-dir="app/src/main/jniLibs/armeabi/" />
 <source-file src="src/android/libs/armeabi/libusb_util.so" target-dir="app/src/main/jniLibs/armeabi/" />
 <source-file src="src/android/libs/armeabi/libserial_port.so" target-dir="app/src/main/jniLibs/armeabi/" />
-<source-file src="src/android/libs/armeabi/libdecode.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<!-- <source-file src="src/android/libs/armeabi/libdecode.so" target-dir="app/src/main/jniLibs/armeabi/" /> -->
  <!-- <source-file src="src/android/libs/armeabi-v7a/libsystem_util.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
  <source-file src="src/android/libs/arm64-v8a/libsystem_util.so" target-dir="app/src/main/jniLibs/arm64-v8a/" /> -->
 
