--- a/plugin.xml
+++ b/plugin.xml
@@ -14,26 +14,58 @@ xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.a
 </config-file>
 <config-file parent="/*" target="AndroidManifest.xml">
 </config-file>
+<provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+<!-- <framework src="src/android/*.gradle" custom="true" type="gradleReference" /> -->
 <source-file src="src/android/SmartOnePrinter.java" target-dir="src/cordova/plugin/smartoneprinter/SmartOnePrinter" />
 <source-file src="src/android/ByteOrder.java" target-dir="src/cordova/plugin/smartoneprinter/ByteOrder" />
+<source-file src="src/android/PrinterData.java" target-dir="src/cordova/plugin/smartoneprinter/PrinterData" />
+<source-file src="src/android/Utils.java" target-dir="src/cordova/plugin/smartoneprinter/Utils" />
 <source-file src="src/android/Order.java" target-dir="src/cordova/plugin/smartoneprinter/Order" />
 <source-file src="src/android/PrinterStatusReceiver.java" target-dir="src/cordova/plugin/smartoneprinter/PrinterStatusReceiver" />
+<source-file src="src/android/utils/ByteUtil.java" target-dir="src/cordova/plugin/smartoneprinter/utils/ByteUtil" />
 <source-file src="src/android/utils/HandlerUtils.java" target-dir="src/cordova/plugin/smartoneprinter/utils/HandlerUtils" />
 
-<source-file src="src/android/libs/armeabi/libsystem_util.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<!-- <source-file src="src/android/libs/armeabi/libsystem_util.so" target-dir="app/src/main/jniLibs/armeabi/" />
 <source-file src="src/android/libs/armeabi/libcommon_printer.so" target-dir="app/src/main/jniLibs/armeabi/" />
 <source-file src="src/android/libs/armeabi/libcommon_printer_48.so" target-dir="app/src/main/jniLibs/armeabi/" />
 <source-file src="src/android/libs/armeabi/libcommon_printer_581.so" target-dir="app/src/main/jniLibs/armeabi/" />
 <source-file src="src/android/libs/armeabi/libcommon_serial.so" target-dir="app/src/main/jniLibs/armeabi/" />
 <source-file src="src/android/libs/armeabi/libAlUSB.so" target-dir="app/src/main/jniLibs/armeabi/" />
 <source-file src="src/android/libs/armeabi/libusb_util.so" target-dir="app/src/main/jniLibs/armeabi/" />
-<source-file src="src/android/libs/armeabi/libserial_port.so" target-dir="app/src/main/jniLibs/armeabi/" />
+<source-file src="src/android/libs/armeabi/libserial_port.so" target-dir="app/src/main/jniLibs/armeabi/" /> -->
+
+<!-- <source-file src="src/android/libs/arm64-v8a/libsystem_util.so" target-dir="app/src/main/jniLibs/arm64-v8a/" />
+<source-file src="src/android/libs/arm64-v8a/libcommon_printer.so" target-dir="app/src/main/jniLibs/arm64-v8a/" />
+<source-file src="src/android/libs/arm64-v8a/libcommon_printer_48.so" target-dir="app/src/main/jniLibs/arm64-v8a/" />
+<source-file src="src/android/libs/arm64-v8a/libcommon_printer_581.so" target-dir="app/src/main/jniLibs/arm64-v8a/" />
+<source-file src="src/android/libs/arm64-v8a/libcommon_serial.so" target-dir="app/src/main/jniLibs/arm64-v8a/" />
+<source-file src="src/android/libs/arm64-v8a/libAlUSB.so" target-dir="app/src/main/jniLibs/arm64-v8a/" />
+<source-file src="src/android/libs/arm64-v8a/libusb_util.so" target-dir="app/src/main/jniLibs/arm64-v8a/" />
+<source-file src="src/android/libs/arm64-v8a/libserial_port.so" target-dir="app/src/main/jniLibs/arm64-v8a/" /> -->
+
+<!-- <source-file src="src/android/libs/armeabi-v7a/libsystem_util.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
+<source-file src="src/android/libs/armeabi-v7a/libcommon_printer.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
+<source-file src="src/android/libs/armeabi-v7a/libcommon_printer_48.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
+<source-file src="src/android/libs/armeabi-v7a/libcommon_printer_581.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
+<source-file src="src/android/libs/armeabi-v7a/libcommon_serial.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
+<source-file src="src/android/libs/armeabi-v7a/libAlUSB.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
+<source-file src="src/android/libs/armeabi-v7a/libusb_util.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
+<source-file src="src/android/libs/armeabi-v7a/libserial_port.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" /> -->
 <!-- <source-file src="src/android/libs/armeabi/libdecode.so" target-dir="app/src/main/jniLibs/armeabi/" /> -->
  <!-- <source-file src="src/android/libs/armeabi-v7a/libsystem_util.so" target-dir="app/src/main/jniLibs/armeabi-v7a/" />
  <source-file src="src/android/libs/arm64-v8a/libsystem_util.so" target-dir="app/src/main/jniLibs/arm64-v8a/" /> -->
 
-<lib-file src="src/android/libs/escpos_20200102_common.jar" />
-<lib-file src="src/android/libs/core-3_3.jar" />
+<lib-file src="src/android/libs/onelib.aar" />
+<framework src="src/android/onelib.gradle" custom="true" type="gradleReference" />
+<!-- <lib-file src="src/android/libs/core-3_3.jar" /> -->
 
 <!-- <lib-file src="src/android/libs/android-support-v4.jar" /> -->
 </platform>
